force-app/main/default/objects/Search_Component_Configuration_Column__mdt/fields/I_RS_Header_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Header_Title__c</fullName>
    <label>Header Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>