force-app/main/default/objects/Search_Component_Configuration_Column__mdt/fields/I_RS_Object__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Search_Component_Configuration_Columns</relationshipLabel>
    <relationshipName>Search_Component_Configuration_Columns</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>