force-app/main/default/objects/Search_Component_Configuration_Column__mdt/fields/I_RS_Order__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Order__c</fullName>
    <description>Left-to-right order on table</description>
    <label>Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>