force-app/main/default/objects/Search_Component_Configuration_Column__mdt/fields/I_RS_Search_Component_Configuration__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Search_Component_Configuration__c</fullName>
    <label>Search Component Configuration</label>
    <referenceTo>Search_Component_Configuration__mdt</referenceTo>
    <relationshipLabel>Table Columns</relationshipLabel>
    <relationshipName>Search_Component_Configuration_Columns</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>